Hotfix中的Hotfix类也重命名为Game,这样要使用Mono层的Game就要用Model.Game来调用，有编译器检查，一般不会错，

--- a/Unity/Hotfix/Unity.Hotfix.csproj
+++ b/Unity/Hotfix/Unity.Hotfix.csproj
@@ -83,7 +83,7 @@
     <Compile Include="Module\Message\MessageDispatherComponent.cs" />
     <Compile Include="Module\Message\OpcodeTypeComponent.cs" />
     <Compile Include="Module\UI\UIComponent.cs" />
-    <Compile Include="Entity\Hotfix.cs" />
+    <Compile Include="Entity\Game.cs" />
     <Compile Include="Entity\Scene.cs" />
     <Compile Include="Module\Message\HotfixMessage.cs" />
     <Compile Include="Module\Message\SessionHelper.cs" />
