mono层的配置生成一个AvoidAOT的方法，防止aot问题

--- a/Unity/Unity.Editor.Plugins.csproj
+++ b/Unity/Unity.Editor.Plugins.csproj
@@ -52,7 +52,7 @@
     <Reference Include="System">
       <HintPath>C:\Apps\Unity\Editor\Data\MonoBleedingEdge\lib\mono\4.5\System.dll</HintPath>
     </Reference>
-    <Reference Include="System.Xml">
+    <Reference Include="System.XML">
       <HintPath>C:\Apps\Unity\Editor\Data\MonoBleedingEdge\lib\mono\4.5\System.XML.dll</HintPath>
     </Reference>
     <Reference Include="System.Core">
